[tool.poetry]
name = "qbuspy"
version = "0.1.0"
description = ""
authors = ["vlaminckaxel <axel.vlaminck@gmail.com>"]
packages = [
    { include = "qbuspy" },
]
[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
notebook = "^6.4.8"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
